<resources>
    <string name="app_name">Android SQLite Setup</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="next_button">Next</string>
    <string name="prev_button">Previous</string>
    <string name="submit_button">Submit</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Wrong!</string>
    <string name="question_table">Question Table</string>
    <string name="answer_key_table">Answer Key Table</string>
    <string name="submission_instruction_table">Submission Instruction Table</string>
    <string name="test_table">Test Table</string>
    <string name="student_info_table">Student Info Table</string>
    <string name="delete_answer_key_data">Delete Answer Key Data</string>
</resources>