<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:padding="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/a_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_a">
        </Button>
        <Button
            android:id="@+id/b_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_b">
        </Button>
        <Button
            android:id="@+id/c_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_c">
        </Button>

        <Button
            android:id="@+id/d_button"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:text="@string/button_d">

        </Button>
        <Button
            android:id="@+id/e_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_e">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prev_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_button">
        </Button>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button">
        </Button>

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="66dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/question_table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/question_table" />

        <Button
            android:id="@+id/answer_key_table_button"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/answer_key_table" />

        <Button
            android:id="@+id/submission_table_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/submission_instruction_table" />

        <Button
            android:id="@+id/test_table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_table" />

        <Button
            android:id="@+id/student_info_table_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/student_info_table" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_answer_key_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_answer_key_data" />
    </LinearLayout>

</LinearLayout>